deploy: cfdd8325e9d1ab9ae79a81a96bc46317a8d94624

--- a/_modules/grandchallenge/components/models.html
+++ b/_modules/grandchallenge/components/models.html
@@ -2128,7 +2128,7 @@
     <span class="p">)</span>
 
     <span class="n">import_status</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">PositiveSmallIntegerField</span><span class="p">(</span>
-        <span class="n">choices</span><span class="o">=</span><span class="n">ImportStatusChoices</span><span class="o">.</span><span class="n">choices</span><span class="p">,</span>
+        <span class="n">choices</span><span class="o">=</span><span class="n">ImportStatusChoices</span><span class="p">,</span>
         <span class="n">default</span><span class="o">=</span><span class="n">ImportStatusChoices</span><span class="o">.</span><span class="n">INITIALIZED</span><span class="p">,</span>
         <span class="n">db_index</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="p">)</span>
@@ -2906,7 +2906,7 @@
         <span class="n">settings</span><span class="o">.</span><span class="n">AUTH_USER_MODEL</span><span class="p">,</span> <span class="n">null</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">on_delete</span><span class="o">=</span><span class="n">models</span><span class="o">.</span><span class="n">SET_NULL</span>
     <span class="p">)</span>
     <span class="n">import_status</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">PositiveSmallIntegerField</span><span class="p">(</span>
-        <span class="n">choices</span><span class="o">=</span><span class="n">ImportStatusChoices</span><span class="o">.</span><span class="n">choices</span><span class="p">,</span>
+        <span class="n">choices</span><span class="o">=</span><span class="n">ImportStatusChoices</span><span class="p">,</span>
         <span class="n">default</span><span class="o">=</span><span class="n">ImportStatusChoices</span><span class="o">.</span><span class="n">INITIALIZED</span><span class="p">,</span>
         <span class="n">db_index</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="p">)</span>
