Only run preprocessor for dicom widget

--- a/app/grandchallenge/uploads/templates/uploads/widget.html
+++ b/app/grandchallenge/uploads/templates/uploads/widget.html
@@ -11,6 +11,7 @@
      data-initialized="false"
      data-max-number-files="{{ widget.attrs.max_number_files }}"
      {% if widget.attrs.multiple %}data-multiple=true{% endif %}
+     data-type={{ widget.type }}
 >
     <div id="{{ widget.attrs.id }}-drag-drop" class="mb-3"></div>
 
