deploy: c779ed06a9c436fdb39c3d56f4a09d2458937e88

--- a/_modules/grandchallenge/components/models.html
+++ b/_modules/grandchallenge/components/models.html
@@ -73,6 +73,7 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">django_deprecate_fields</span><span class="w"> </span><span class="kn">import</span> <span class="n">deprecate_field</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">django_extensions.db.fields</span><span class="w"> </span><span class="kn">import</span> <span class="n">AutoSlugField</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">panimg.models</span><span class="w"> </span><span class="kn">import</span> <span class="n">MAXIMUM_SEGMENTS_LENGTH</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">pydantic_core</span><span class="w"> </span><span class="kn">import</span> <span class="n">MISSING</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">grandchallenge.cases.models</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
     <span class="n">DICOMImageSetUpload</span><span class="p">,</span>
@@ -757,12 +758,15 @@
 
         <span class="k">return</span> <span class="n">ForgeSocket</span><span class="p">(</span>
             <span class="n">slug</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">slug</span><span class="p">,</span>
-            <span class="n">kind</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">get_kind_display</span><span class="p">(),</span>
-            <span class="n">super_kind</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">super_kind</span><span class="o">.</span><span class="n">label</span><span class="p">,</span>
             <span class="n">relative_path</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">relative_path</span><span class="p">,</span>
             <span class="n">example_value</span><span class="o">=</span><span class="p">(</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">json_kind_example</span><span class="o">.</span><span class="n">value</span> <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_json_kind</span> <span class="k">else</span> <span class="kc">None</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">json_kind_example</span><span class="o">.</span><span class="n">value</span> <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_json_kind</span> <span class="k">else</span> <span class="n">MISSING</span>
             <span class="p">),</span>
+            <span class="n">is_image_kind</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">is_image_kind</span><span class="p">,</span>
+            <span class="n">is_panimg_kind</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">is_panimg_kind</span><span class="p">,</span>
+            <span class="n">is_dicom_image_kind</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">is_dicom_image_kind</span><span class="p">,</span>
+            <span class="n">is_json_kind</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">is_json_kind</span><span class="p">,</span>
+            <span class="n">is_file_kind</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">is_file_kind</span><span class="p">,</span>
         <span class="p">)</span>
 
     <span class="k">class</span><span class="w"> </span><span class="nc">Meta</span><span class="p">:</span>
