--- a/app/grandchallenge/core/static/vendored/datatables.net-buttons-bs4/css/buttons.bootstrap4.css
+++ b/app/grandchallenge/core/static/vendored/datatables.net-buttons-bs4/css/buttons.bootstrap4.css
@@ -119,7 +119,7 @@ div.dt-button-collection .dt-button-active:after {
   margin-top: -10px;
   right: 1em;
   display: inline-block;
-  content: "✓";
+  content: "\2713";
   color: inherit;
 }
 div.dt-button-collection .dt-button-active.dt-button-split {
@@ -137,7 +137,7 @@ div.dt-button-collection .dt-button-active.dt-button-split > *:first-child:after
   margin-top: -10px;
   right: 1em;
   display: inline-block;
-  content: "✓";
+  content: "\2713";
   color: inherit;
 }
 div.dt-button-collection .dt-button-active-a a {
@@ -147,7 +147,7 @@ div.dt-button-collection .dt-button-active-a a:after {
   position: absolute;
   right: 1em;
   display: inline-block;
-  content: "✓";
+  content: "\2713";
   color: inherit;
 }
 div.dt-button-collection span.dt-button-spacer {
@@ -171,172 +171,8 @@ div.dt-button-collection span.dt-button-spacer.bar {
     box-shadow: none !important;
   }
 }
-html.dark div.dt-button-info {
-  background-color: var(--dt-html-background);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-}
-
 div.dt-buttons div.btn-group {
   position: initial;
-}
-div.dt-buttons div.dropdown-menu {
-  margin-top: 4px;
-  width: 200px;
-}
-div.dt-buttons div.dropdown-menu .dt-button {
-  position: relative;
-}
-div.dt-buttons div.dropdown-menu .dt-button.dropdown-toggle::after {
-  position: absolute;
-  right: 12px;
-  top: 14px;
-}
-div.dt-buttons div.dropdown-menu div.dt-button-split {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-content: flex-start;
-  align-items: stretch;
-}
-div.dt-buttons div.dropdown-menu div.dt-button-split a:first-child {
-  min-width: auto;
-  flex: 1 0 50px;
-  padding-right: 0;
-}
-div.dt-buttons div.dropdown-menu div.dt-button-split button:last-child {
-  min-width: 33px;
-  flex: 0;
-  background: transparent;
-  border: none;
-  line-height: 1rem;
-  color: rgb(33, 37, 41);
-  padding: 0 16px;
-  overflow: visible;
-}
-div.dt-buttons div.dropdown-menu div.dt-button-split button:last-child:hover {
-  color: #16181b;
-  background-color: #f8f9fa;
-}
-div.dt-buttons div.dropdown-menu.fixed {
-  position: fixed;
-  display: block;
-  top: 50%;
-  left: 50%;
-  margin-left: -75px;
-  border-radius: 5px;
-  background-color: white;
-  padding: 0.5em;
-}
-div.dt-buttons div.dropdown-menu.fixed.two-column {
-  margin-left: -200px;
-}
-div.dt-buttons div.dropdown-menu.fixed.three-column {
-  margin-left: -225px;
-}
-div.dt-buttons div.dropdown-menu.fixed.four-column {
-  margin-left: -300px;
-}
-div.dt-buttons div.dropdown-menu.fixed.columns {
-  margin-left: -409px;
-}
-@media screen and (max-width: 1024px) {
-  div.dt-buttons div.dropdown-menu.fixed.columns {
-    margin-left: -308px;
-  }
-}
-@media screen and (max-width: 640px) {
-  div.dt-buttons div.dropdown-menu.fixed.columns {
-    margin-left: -203px;
-  }
-}
-@media screen and (max-width: 460px) {
-  div.dt-buttons div.dropdown-menu.fixed.columns {
-    margin-left: -100px;
-  }
-}
-div.dt-buttons div.dropdown-menu.fixed > :last-child {
-  max-height: 100vh;
-  overflow: auto;
-}
-div.dt-buttons div.dropdown-menu.two-column > :last-child, div.dt-buttons div.dropdown-menu.three-column > :last-child, div.dt-buttons div.dropdown-menu.four-column > :last-child {
-  display: block !important;
-  column-gap: 8px;
-}
-div.dt-buttons div.dropdown-menu.two-column > :last-child > *, div.dt-buttons div.dropdown-menu.three-column > :last-child > *, div.dt-buttons div.dropdown-menu.four-column > :last-child > * {
-  -webkit-column-break-inside: avoid;
-  break-inside: avoid;
-}
-div.dt-buttons div.dropdown-menu.two-column {
-  width: 400px;
-}
-div.dt-buttons div.dropdown-menu.two-column > :last-child {
-  padding-bottom: 1px;
-  column-count: 2;
-}
-div.dt-buttons div.dropdown-menu.three-column {
-  width: 450px;
-}
-div.dt-buttons div.dropdown-menu.three-column > :last-child {
-  padding-bottom: 1px;
-  column-count: 3;
-}
-div.dt-buttons div.dropdown-menu.four-column {
-  width: 600px;
-}
-div.dt-buttons div.dropdown-menu.four-column > :last-child {
-  padding-bottom: 1px;
-  column-count: 4;
-}
-div.dt-buttons div.dropdown-menu .dt-button {
-  border-radius: 0;
-}
-div.dt-buttons div.dropdown-menu.columns {
-  width: auto;
-}
-div.dt-buttons div.dropdown-menu.columns > :last-child {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 6px;
-  width: 818px;
-  padding-bottom: 1px;
-}
-div.dt-buttons div.dropdown-menu.columns > :last-child .dt-button {
-  min-width: 200px;
-  flex: 0 1;
-  margin: 0;
-}
-div.dt-buttons div.dropdown-menu.columns.dtb-b3 > :last-child, div.dt-buttons div.dropdown-menu.columns.dtb-b2 > :last-child, div.dt-buttons div.dropdown-menu.columns.dtb-b1 > :last-child {
-  justify-content: space-between;
-}
-div.dt-buttons div.dropdown-menu.columns.dtb-b3 .dt-button {
-  flex: 1 1 32%;
-}
-div.dt-buttons div.dropdown-menu.columns.dtb-b2 .dt-button {
-  flex: 1 1 48%;
-}
-div.dt-buttons div.dropdown-menu.columns.dtb-b1 .dt-button {
-  flex: 1 1 100%;
-}
-@media screen and (max-width: 1024px) {
-  div.dt-buttons div.dropdown-menu.columns > :last-child {
-    width: 612px;
-  }
-}
-@media screen and (max-width: 640px) {
-  div.dt-buttons div.dropdown-menu.columns > :last-child {
-    width: 406px;
-  }
-  div.dt-buttons div.dropdown-menu.columns.dtb-b3 .dt-button {
-    flex: 0 1 32%;
-  }
-}
-@media screen and (max-width: 460px) {
-  div.dt-buttons div.dropdown-menu.columns > :last-child {
-    width: 200px;
-  }
 }
 div.dt-buttons span.dt-button-spacer.empty {
   margin: 1px;
@@ -366,6 +202,166 @@ div.dt-buttons .btn.processing:after {
   -ms-animation: dtb-spinner 1500ms infinite linear;
   -webkit-animation: dtb-spinner 1500ms infinite linear;
   -moz-animation: dtb-spinner 1500ms infinite linear;
+}
+
+div.dropdown-menu.dt-button-collection {
+  margin-top: 4px;
+  width: 200px;
+}
+div.dropdown-menu.dt-button-collection .dt-button {
+  position: relative;
+}
+div.dropdown-menu.dt-button-collection .dt-button.dropdown-toggle::after {
+  position: absolute;
+  right: 12px;
+  top: 14px;
+}
+div.dropdown-menu.dt-button-collection div.dt-button-split {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: flex-start;
+  align-items: stretch;
+}
+div.dropdown-menu.dt-button-collection div.dt-button-split a:first-child {
+  min-width: auto;
+  flex: 1 0 50px;
+  padding-right: 0;
+}
+div.dropdown-menu.dt-button-collection div.dt-button-split button:last-child {
+  min-width: 33px;
+  flex: 0;
+  background: transparent;
+  border: none;
+  line-height: 1rem;
+  color: rgb(33, 37, 41);
+  padding: 0 16px;
+  overflow: visible;
+}
+div.dropdown-menu.dt-button-collection div.dt-button-split button:last-child:hover {
+  color: #16181b;
+  background-color: #f8f9fa;
+}
+div.dropdown-menu.dt-button-collection.fixed {
+  position: fixed;
+  display: block;
+  top: 50%;
+  left: 50%;
+  margin-left: -75px;
+  border-radius: 5px;
+  background-color: white;
+  padding: 0.5em;
+}
+div.dropdown-menu.dt-button-collection.fixed.two-column {
+  margin-left: -200px;
+}
+div.dropdown-menu.dt-button-collection.fixed.three-column {
+  margin-left: -225px;
+}
+div.dropdown-menu.dt-button-collection.fixed.four-column {
+  margin-left: -300px;
+}
+div.dropdown-menu.dt-button-collection.fixed.columns {
+  margin-left: -409px;
+}
+@media screen and (max-width: 1024px) {
+  div.dropdown-menu.dt-button-collection.fixed.columns {
+    margin-left: -308px;
+  }
+}
+@media screen and (max-width: 640px) {
+  div.dropdown-menu.dt-button-collection.fixed.columns {
+    margin-left: -203px;
+  }
+}
+@media screen and (max-width: 460px) {
+  div.dropdown-menu.dt-button-collection.fixed.columns {
+    margin-left: -100px;
+  }
+}
+div.dropdown-menu.dt-button-collection.fixed > :last-child {
+  max-height: 100vh;
+  overflow: auto;
+}
+div.dropdown-menu.dt-button-collection.two-column > :last-child, div.dropdown-menu.dt-button-collection.three-column > :last-child, div.dropdown-menu.dt-button-collection.four-column > :last-child {
+  display: block !important;
+  column-gap: 8px;
+}
+div.dropdown-menu.dt-button-collection.two-column > :last-child > *, div.dropdown-menu.dt-button-collection.three-column > :last-child > *, div.dropdown-menu.dt-button-collection.four-column > :last-child > * {
+  -webkit-column-break-inside: avoid;
+  break-inside: avoid;
+}
+div.dropdown-menu.dt-button-collection.two-column {
+  width: 400px;
+}
+div.dropdown-menu.dt-button-collection.two-column > :last-child {
+  padding-bottom: 1px;
+  column-count: 2;
+}
+div.dropdown-menu.dt-button-collection.three-column {
+  width: 450px;
+}
+div.dropdown-menu.dt-button-collection.three-column > :last-child {
+  padding-bottom: 1px;
+  column-count: 3;
+}
+div.dropdown-menu.dt-button-collection.four-column {
+  width: 600px;
+}
+div.dropdown-menu.dt-button-collection.four-column > :last-child {
+  padding-bottom: 1px;
+  column-count: 4;
+}
+div.dropdown-menu.dt-button-collection .dt-button {
+  border-radius: 0;
+}
+div.dropdown-menu.dt-button-collection.columns {
+  width: auto;
+}
+div.dropdown-menu.dt-button-collection.columns > :last-child {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 6px;
+  width: 818px;
+  padding-bottom: 1px;
+}
+div.dropdown-menu.dt-button-collection.columns > :last-child .dt-button {
+  min-width: 200px;
+  flex: 0 1;
+  margin: 0;
+}
+div.dropdown-menu.dt-button-collection.columns.dtb-b3 > :last-child, div.dropdown-menu.dt-button-collection.columns.dtb-b2 > :last-child, div.dropdown-menu.dt-button-collection.columns.dtb-b1 > :last-child {
+  justify-content: space-between;
+}
+div.dropdown-menu.dt-button-collection.columns.dtb-b3 .dt-button {
+  flex: 1 1 32%;
+}
+div.dropdown-menu.dt-button-collection.columns.dtb-b2 .dt-button {
+  flex: 1 1 48%;
+}
+div.dropdown-menu.dt-button-collection.columns.dtb-b1 .dt-button {
+  flex: 1 1 100%;
+}
+@media screen and (max-width: 1024px) {
+  div.dropdown-menu.dt-button-collection.columns > :last-child {
+    width: 612px;
+  }
+}
+@media screen and (max-width: 640px) {
+  div.dropdown-menu.dt-button-collection.columns > :last-child {
+    width: 406px;
+  }
+  div.dropdown-menu.dt-button-collection.columns.dtb-b3 .dt-button {
+    flex: 0 1 32%;
+  }
+}
+@media screen and (max-width: 460px) {
+  div.dropdown-menu.dt-button-collection.columns > :last-child {
+    width: 200px;
+  }
 }
 
 div.dt-button-background {
